commit : Update outing ok.

--- a/templates/outing/createOuting.html.twig
+++ b/templates/outing/createOuting.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block Pagetitle %}
-    Créer une sortie :
+    Modifier une sortie :
 {% endblock %}
 
 {% block main %}
@@ -61,10 +61,6 @@
 
         <div class="button">
         <a href="{{ url('create_location') }}">Ajouter un lieu </a>
-        </div>
-
-        <div class="button">
-            <a href="{{ url('main_index') }}">Annuler</a>
         </div>
 
 
