--- a/templates/user/myProfile.html.twig
+++ b/templates/user/myProfile.html.twig
@@ -6,7 +6,7 @@ Mon profil
 
 {% block main %}
  {% if app.user %}
-    <div class="form">
+    <div class="form form_oneblock">
         {{ form_start (userModifyForm) }}
         <div class="form_groupe">
             {{ form_label (userModifyForm.name) }}
