--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,20 @@
 :root {
     --bg-color : white;
     --text-color : black;
-    --title-color : #5592FF;
+    --title-color : black;
+    --bg-nav-color : rgba(220, 178, 82, 0.8);
+    --bg-tab-corps : rgba(220, 178, 82, 0.5);
+    --bg-tab-title : rgba(220, 178, 82, 0.8);
+    --tab-title-color : black;
+
+
+    --archive-title: #5592FF;
+    --archive-tabtitle : #2e3136;
+    --archive-tabcorps : rgba(130,130,130,0.5);
 }
 
 body {
     background-color: var(--bg-color);
-    margin: 1% 3% 1% 3% ;
     display: flex;
     flex-direction: column;
     min-height: 95vh;
@@ -25,22 +33,26 @@ h2 {
 
 main {
     flex-grow: 1;
+    margin: 1% 3% 1% 3% ;
+
 }
 
 header {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
+    background-color: var(--bg-nav-color) ;
 }
 
 .header_blockleft {
     display: flex;
     flex-direction: row;
-    width: 100%;
+    margin-right: 15%;
+
 }
 
 header nav {
-    width: 100%;
+    width: 50%;
 }
 
 .header_blockleft h1 {
@@ -63,10 +75,17 @@ header li {
     padding: 1%;
 }
 
+header .login_logout_msg {
+    width: 100%;
+}
+
+
 footer {
     display: flex;
     justify-content: space-evenly;
     flex-direction: row;
+    margin-top : 5%;
+    background-color: var(--bg-nav-color);
 }
 
 .group_buttons_index {
@@ -93,6 +112,7 @@ footer {
 
 .hometitle {
     text-align: end;
+    margin: 2% 1% 5% 0;
 }
 
 .tableau_home td {
@@ -100,13 +120,13 @@ footer {
     min-width: 100px;
     text-align: center;
     font-size: 18px;
-    background-color: rgba(130,130,130,0.5);
+    background-color: var(--bg-tab-corps);
 }
 
 .tableau_home th {
-    background-color: #2e3136;
+    background-color: var(--bg-tab-title);
     font-size: 20px;
-    color: white;
+    color: var(--tab-title-color);
     height: 40px;
 }
 
@@ -114,11 +134,13 @@ footer {
     display: flex;
     flex-direction: column;
     margin-bottom: 10px;
+    width: 100%;
+
 }
 
-.form_groupe input, #user_campus, form input {
+.form_groupe input, #user_campus, form input, #campus {
     border-radius: 10px;
-    width: 15%;
+    width: 30%;
     font-size: 16px;
     color: var(--title-color);
 }
@@ -127,3 +149,30 @@ footer {
     margin-right: 15px;
 }
 
+.form_checkbox {
+    display: flex;
+    flex-direction: row;
+}
+
+.form {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-evenly;
+}
+
+.notCheckbox_group {
+    width: 50%;
+}
+
+.checkbox_group {
+    width: 50%;
+}
+
+.filter_title {
+    margin-bottom: 2%;
+}
+
+.rememberme_checkbox {
+
+}
