--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -25,8 +25,8 @@
        {#  Add a remember_me option below your firewall to activate remember me functionality.
         See https://symfony.com/doc/current/security/remember_me.html
        #}
-        <div class="checkbox mb-3">
-                <input type="checkbox" id="remember_me" name="_remember_me">
+        <div class="checkbox rememberme_checkbox">
+            <input type="checkbox" id="remember_me" name="_remember_me">
             <label for="remember_me"> Se souvenir de moi </label>
         </div>
 
