--- a/templates/user/homeSignedIn.html.twig
+++ b/templates/user/homeSignedIn.html.twig
@@ -120,13 +120,18 @@
 
                              {% endif %}
 
-                             {% if outing.state == 'Ouverte' %}
+                             {% if  outing.state == 'Ouverte' and outing.maxNumberRegistration <= outing.participants|length %}
+                                 <p>Complet</p> -
+                                    {% if app.user in outing.participants %}
+                                         <a href="{{ url('user_sign_out_outing', {'id':outing.getId()}) }}">Se désinscrire</a>
+                                    {% endif %}
+                             {% elseif outing.state == 'Ouverte' and outing.maxNumberRegistration > outing.participants|length %}
                              <a href="{{ url('outing_show', {'id':outing.getId()}) }}">Afficher</a> -
-                                 {% if app.user in outing.participants %}
+                                    {% if app.user in outing.participants %}
                                      <a href="{{ url('user_sign_out_outing', {'id':outing.getId()}) }}">Se désinscrire</a>
-                                 {% else %}
-                                        <a href="{{ url('user_sign_up_outing', {'id':outing.getId()}) }}">S'inscrire</a>
-                                 {% endif %}
+                                    {% else %}
+                                     <a href="{{ url('user_sign_up_outing', {'id':outing.getId()}) }}">S'inscrire</a>
+                                    {% endif %}
                              {% endif %}
 
                              {% if outing.state == 'Clôturée' %}
