--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,11 +18,11 @@
 <body>
 <header>
     <div class="header_blockleft">
-        <img src="{{ asset("images/bucketList1.png") }}" alt="logo" title="logo Sortir.com">
+        <img src="{{ asset("images/logoComplet_invers.png") }}" alt="logo" title="logo Sortir.com">
 
         {# ********************************************* #}
         <h1>
-            Sortir.com<br>
+            {# Titre optionnel ici #}
         </h1>
         {# ********************************************* #}
     </div>
