modif du twig page d'accueil Modifier/Publier

--- a/templates/user/homeSignedIn.html.twig
+++ b/templates/user/homeSignedIn.html.twig
@@ -113,7 +113,7 @@
 
                              {% if outing.state == 'En création' %}
                                 {% if app.user == outing.organizer %}
-                                 <a href="{{ url('modify_outing', {'id':outing.getId()}) }}">Modifier</a> - <a href="#">Publier</a>
+                                 <a href="{{ url('modify_outing', {'id':outing.getId()}) }}">Modifier/Publier</a>
                                     {% else %}
                                     <p> Sortie en création<br>Aucune action possible</p>
                                 {% endif %}
