--- a/templates/outing/createOuting.html.twig
+++ b/templates/outing/createOuting.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block Pagetitle %}
-    Modifier une sortie :
+    Créer une sortie :
 {% endblock %}
 
 {% block main %}
