--- a/templates/outing/outingPage.html.twig
+++ b/templates/outing/outingPage.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block Pagetitle %}
-Sortie "{{ outing.name }}"
+    Sortie "{{ outing.name }}"
 {% endblock %}
 
 {% block main %}
@@ -9,7 +9,8 @@ Sortie "{{ outing.name }}"
     <div class="block1">
         ETAT : {{ outing.state }}<br>
         Nom de la sortie : {{ outing.name }}<br>
-        Date et heure de la sortie : {{ outing.startingDateTime|date('d/m/y') }} - {{ outing.startingDateTime|date('h:m') }}<br>
+        Date et heure de la sortie : {{ outing.startingDateTime|date('d/m/y') }}
+        - {{ outing.startingDateTime|date('h:m') }}<br>
         Date limite d'inscription : {{ outing.registrationDeadLine|date('d/m/y') }}<br>
         Nombre de places : {{ outing.maxNumberRegistration }}<br>
         Durée : {{ outing.duration|date('h') }} h {{ outing.duration|date('m') }} min <br>
@@ -36,37 +37,36 @@ Sortie "{{ outing.name }}"
             </tr>
 
 
-
-                {% if outing.participants is empty %}
-                    <tr>
-                        <td colspan="2">
+            {% if outing.participants is empty %}
+                <tr>
+                    <td colspan="2">
                         <p>Aucun participant</p>
-                        </td>
-                    </tr>
-
-                {% else %}
-
-                    <tr>
-
-                {% for title in outing.participants|batch(2) %}
-                    {% for participant in title %}
-
-                    <td>
-                        {{ participant.username }}
                     </td>
-                    <td>
-                        {{ participant.name }} {{ participant.surname }}
-                    </td>
+                </tr>
+
+            {% else %}
+
+                <tr>
+
+                    {% for title in outing.participants|batch(2) %}
+                        {% for participant in title %}
+
+                            <td>
+                                {{ participant.username }}
+                            </td>
+                            <td>
+                                {{ participant.name }} {{ participant.surname }}
+                            </td>
+                        {% endfor %}
                     {% endfor %}
-                {% endfor %}
-            </tr>
+                </tr>
             {% endif %}
         </table>
 
     </div>
-<br>
+    <br>
     <div class="button">
-    <a href="{{ url('main_index') }}">Retour</a>
+        <a href="{{ url('main_index') }}">Retour</a>
     </div>
 
 {% endblock %}
