--- a/templates/user/homeSignedIn.html.twig
+++ b/templates/user/homeSignedIn.html.twig
@@ -1,10 +1,10 @@
 {% extends('./base.html.twig') %}
 
  {% block Pagetitle %}
-    <div class="hometitle">
-        Date du jour : {{ "now"|date("d/m/y") }}<br>
-        Participant(e) : {{ app.user.name }} {{ app.user.surname }}
-    </div>
+     <div class="hometitle">
+         Date du jour : {{ "now"|date("d/m/y") }}<br>
+         Participant(e) : {{ app.user.name }} {{ app.user.surname }}
+     </div>
  {% endblock %}
 
  {% block main %}
@@ -19,54 +19,59 @@
              {{ form_start(form) }}
 
              <div class="form_groupe">
-             {{ form_label(form.q) }}
-             {{ form_widget(form.q) }}
-             {{ form_errors(form.q) }}
-         </div>
+                 {{ form_label(form.q) }}
+                 {{ form_widget(form.q) }}
+                 {{ form_errors(form.q) }}
+             </div>
 
-         <div class="form_groupe">
-             {{ form_label(form.campus) }}
-             {{ form_widget(form.campus) }}
-             {{ form_errors(form.campus) }}
-         </div>
+             <div class="form_groupe">
+                 {{ form_label(form.campus) }}
+                 {{ form_widget(form.campus) }}
+                 {{ form_errors(form.campus) }}
+             </div>
 
-         <div class="form_groupe">
-             {{ form_label(form.mindate) }}
-             {{ form_widget(form.mindate) }}
-         </div>
+             <div class="blockDateFilter">
+                 <div class="form_groupe">
+                     {{ form_label(form.mindate) }}
+                     {{ form_widget(form.mindate) }}
+                 </div>
 
 
-         <div class="form_groupe">
-             {{ form_label(form.maxdate) }}
-             {{ form_widget(form.maxdate) }}
-         </div>
+                 <div class="form_groupe">
+                     {{ form_label(form.maxdate) }}
+                     {{ form_widget(form.maxdate) }}
+                 </div>
+                 <div class="button buttonResetDate">
+                     <a href="{{ url('main_index') }}">Reinitialiser</a>
+                 </div>
+             </div>
 
          </div>
          <div class="checkbox_group">
 
-         <div class="form_groupe form_checkbox">
-             {{ form_widget(form.organizer) }}
-             {{ form_label(form.organizer) }}
-             {{ form_errors(form.organizer) }}
-         </div>
+             <div class="form_groupe form_checkbox">
+                 {{ form_widget(form.organizer) }}
+                 {{ form_label(form.organizer) }}
+                 {{ form_errors(form.organizer) }}
+             </div>
 
-         <div class="form_groupe form_checkbox">
-             {{ form_widget(form.participant) }}
-             {{ form_label(form.participant) }}
-             {{ form_errors(form.participant) }}
-         </div>
+             <div class="form_groupe form_checkbox">
+                 {{ form_widget(form.participant) }}
+                 {{ form_label(form.participant) }}
+                 {{ form_errors(form.participant) }}
+             </div>
 
-         <div class="form_groupe form_checkbox">
-             {{ form_widget(form.notParticipant) }}
-             {{ form_label(form.notParticipant) }}
-             {{ form_errors(form.notParticipant) }}
-         </div>
+             <div class="form_groupe form_checkbox">
+                 {{ form_widget(form.notParticipant) }}
+                 {{ form_label(form.notParticipant) }}
+                 {{ form_errors(form.notParticipant) }}
+             </div>
 
-         <div class="form_groupe form_checkbox">
-             {{ form_widget(form.pastOutings) }}
-             {{ form_label(form.pastOutings) }}
-             {{ form_errors(form.pastOutings) }}
-         </div>
+             <div class="form_groupe form_checkbox">
+                 {{ form_widget(form.pastOutings) }}
+                 {{ form_label(form.pastOutings) }}
+                 {{ form_errors(form.pastOutings) }}
+             </div>
 
          </div>
 
@@ -96,62 +101,65 @@
              <tbody>
              {% for title in filterOutings|batch(8) %}
                  <tr>
-                     {% for outing in title %}
-                         <td data-label="Nom de la sortie">{{ outing.name }}</td>
-                         <td data-label="Date de la sortie">{{ outing.startingDateTime|date("d/m/y") }}</td>
-                         <td data-label="Date de clotûre">{{ outing.registrationDeadLine|date("d/m/y") }}</td>
-                         <td data-label="nb d'inscrits/places max">{{ outing.participants|length }}/{{ outing.maxNumberRegistration }}</td>
-                         <td data-label="Etat de la sortie">{{ outing.state }}</td>
-                         <td data-label="Inscrit(e) ?">
-                             {% if app.user in outing.participants %}
+                 {% for outing in title %}
+                     <td data-label="Nom de la sortie">{{ outing.name }}</td>
+                     <td data-label="Date de la sortie">{{ outing.startingDateTime|date("d/m/y") }}</td>
+                     <td data-label="Date de clotûre">{{ outing.registrationDeadLine|date("d/m/y") }}</td>
+                     <td data-label="nb d'inscrits/places max">{{ outing.participants|length }}
+                         /{{ outing.maxNumberRegistration }}</td>
+                     <td data-label="Etat de la sortie">{{ outing.state }}</td>
+                     <td data-label="Inscrit(e) ?">
+                         {% if app.user in outing.participants %}
                              <p>X</p>
-                             {% endif %}
-                         </td>
-                         <td data-label="Organisateur"><a href="{{ url('user_show_organizer', {'id':outing.getOrganizer().getId()}) }}">{{ outing.organizer.username }}</a>
+                         {% endif %}
+                     </td>
+                     <td data-label="Organisateur"><a
+                                 href="{{ url('user_show_organizer', {'id':outing.getOrganizer().getId()}) }}">{{ outing.organizer.username }}</a>
 
 
-                         </td>
-                         <td data-label="Actions">
-                             {# TODO :: gérer l'affichage des liens en fonction des inscriptions de l'utilisateur !! et de son statut organisateur ou non #}
+                     </td>
+                     <td data-label="Actions">
+                         {# TODO :: gérer l'affichage des liens en fonction des inscriptions de l'utilisateur !! et de son statut organisateur ou non #}
 
-                             {% if outing.state == 'En création' %}
-                                {% if app.user == outing.organizer %}
+                         {% if outing.state == 'En création' %}
+                             {% if app.user == outing.organizer %}
                                  <a href="{{ url('modify_outing', {'id':outing.getId()}) }}">Modifier/Publier</a>
-                                    {% else %}
-                                    <p> Sortie en création<br>Aucune action possible</p>
-                                {% endif %}
-
+                             {% else %}
+                                 <p> Sortie en création<br>Aucune action possible</p>
                              {% endif %}
 
-                             {% if  outing.state == 'Ouverte' and outing.maxNumberRegistration <= outing.participants|length %}
-                                 <p>Complet</p> -
-                                    {% if app.user in outing.participants %}
-                                         <a href="{{ url('user_sign_out_outing', {'id':outing.getId()}) }}">Se désinscrire</a>
-                                    {% endif %}
-                             {% elseif outing.state == 'Ouverte' and outing.maxNumberRegistration > outing.participants|length %}
+                         {% endif %}
+
+                         {% if  outing.state == 'Ouverte' and outing.maxNumberRegistration <= outing.participants|length %}
+                             <p>Complet</p> -
+                             {% if app.user in outing.participants %}
+                                 <a href="{{ url('user_sign_out_outing', {'id':outing.getId()}) }}">Se désinscrire</a>
+                             {% endif %}
+                         {% elseif outing.state == 'Ouverte' and outing.maxNumberRegistration > outing.participants|length %}
                              <a href="{{ url('outing_show', {'id':outing.getId()}) }}">Afficher</a> -
-                                    {% if app.user in outing.participants %}
-                                     <a href="{{ url('user_sign_out_outing', {'id':outing.getId()}) }}">Se désinscrire</a>
-                                    {% else %}
-                                     <a href="{{ url('user_sign_up_outing', {'id':outing.getId()}) }}">S'inscrire</a>
-                                    {% endif %}
+                             {% if app.user in outing.participants %}
+                                 <a href="{{ url('user_sign_out_outing', {'id':outing.getId()}) }}">Se désinscrire</a>
+                             {% else %}
+                                 <a href="{{ url('user_sign_up_outing', {'id':outing.getId()}) }}">S'inscrire</a>
                              {% endif %}
-                             {% if outing.state == 'Clôturée' %}
-                             <a href="{{  url('outing_show', {'id':outing.getId()}) }}">Afficher</a> - <a href="{{ url('user_sign_out_outing', {'id':outing.getId()}) }}">Se désinscrire</a>
-                             {% endif %}
+                         {% endif %}
+                         {% if outing.state == 'Clôturée' %}
+                             <a href="{{ url('outing_show', {'id':outing.getId()}) }}">Afficher</a> - <a
+                                 href="{{ url('user_sign_out_outing', {'id':outing.getId()}) }}">Se désinscrire</a>
+                         {% endif %}
 
-                             {% if outing.state == 'Terminée' or outing.state == 'En cours' %}
-                                 <a href="{{  url('outing_show', {'id':outing.getId()}) }}">Afficher</a>
-                             {% endif %}
+                         {% if outing.state == 'Terminée' or outing.state == 'En cours' %}
+                             <a href="{{ url('outing_show', {'id':outing.getId()}) }}">Afficher</a>
+                         {% endif %}
 
-                             {% if outing.state == 'Archivée' %}
-                                 <a href="{{  url('outing_show', {'id':outing.getId()}) }}">Afficher</a>
-                             {% endif %}
+                         {% if outing.state == 'Archivée' %}
+                             <a href="{{ url('outing_show', {'id':outing.getId()}) }}">Afficher</a>
+                         {% endif %}
 
-                         </td>
+                     </td>
 
                      </tr>
-                     {% endfor %}
+                 {% endfor %}
 
              {% endfor %}
              </tbody>
