--- a/templates/user/homeSignedIn.html.twig
+++ b/templates/user/homeSignedIn.html.twig
@@ -140,7 +140,12 @@
                              {% if app.user in outing.participants %}
                                  <a href="{{ url('user_sign_out_outing', {'id':outing.getId()}) }}">Se désinscrire</a>
                              {% else %}
+                                 {% if app.user != outing.organizer %}
                                  <a href="{{ url('user_sign_up_outing', {'id':outing.getId()}) }}">S'inscrire</a>
+                                     {% endif %}
+                                 {% if app.user == outing.organizer %}
+                                     <a href="{{ url('cancel_outing', {'id':outing.getId()}) }}">Annuler</a>
+                                     {% endif %}
                              {% endif %}
                          {% endif %}
                          {% if outing.state == 'Clôturée' %}
@@ -155,6 +160,7 @@
                          {% if outing.state == 'Archivée' %}
                              <a href="{{ url('outing_show', {'id':outing.getId()}) }}">Afficher</a>
                          {% endif %}
+
 
                      </td>
 
